<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:background="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userTIL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/login_userHint"
                    app:boxBackgroundColor="@android:color/white"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userTIET"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:lines="1"
                        android:inputType="textEmailAddress"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="8dp"
                        tools:text="" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passTIL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:hint="@string/login_passHint"
                    app:boxBackgroundColor="@android:color/white"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="@+id/userTIL"
                    app:layout_constraintStart_toStartOf="@+id/userTIL"
                    app:layout_constraintTop_toBottomOf="@+id/userTIL"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passTIET"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:paddingStart="16dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="8dp"
                        tools:text="AA" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/loginBtn"
                    style="@style/AppTheme.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_loginBtn"
                    app:layout_constraintEnd_toEndOf="@+id/passTIL"
                    app:layout_constraintStart_toStartOf="@+id/passTIL"
                    app:layout_constraintTop_toBottomOf="@+id/rememberCb" />

                <Button
                    android:id="@+id/forgotBtn"
                    style="@style/AppTheme.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/login_forgotBtn"
                    android:textColor="#BBB"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/loginBtn"
                    app:layout_constraintStart_toStartOf="@+id/loginBtn"
                    app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

                <CheckBox
                    android:id="@+id/rememberCb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Recordar Contraseña"
                    app:layout_constraintEnd_toEndOf="@+id/passTIL"
                    app:layout_constraintStart_toStartOf="@+id/passTIL"
                    app:layout_constraintTop_toBottomOf="@+id/passTIL" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loadingLy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:background="@color/loading_bg"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/loadingPb"
                style="@style/AppTheme.ProgressBarThemeHorizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/progressbar_heightHi"
                android:indeterminate="true"
                app:layout_constraintBottom_toTopOf="@+id/loadingTv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:layout_editor_absoluteX="10dp" />

            <TextView
                android:id="@+id/loadingTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/util_loading"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loadingPb" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>